// ===============================
// TABLAS PRINCIPALES
// ===============================

Table players {
  player_id integer [primary key]
  name varchar [not null]
  team varchar
  team_id integer
  nationality varchar
  country_alpha2 varchar
  position varchar
  specific_position varchar
  age integer
  height integer
  foot varchar
  attributes varchar
  updated_at timestamp [default: `now()`]
}

Table tracked_leagues {
  id integer [primary key]
  url varchar [not null, unique]
  tournament_id integer
  tournament_name varchar
  season_id integer
  season_name varchar
  accumulation varchar [default: 'total']
  added_at timestamp [default: `now()`]
  last_updated timestamp
  is_active integer [default: 1]
}

// ===============================
// DATOS ESTADÍSTICOS (FACT TABLE)
// ===============================

Table season_stats {
  id integer [primary key]
  player_id integer [not null]
  tournament_id integer [not null]
  tournament_name varchar
  season_id integer [not null]
  season_name varchar
  season_year varchar
  team_id integer
  team_name varchar
  accumulation varchar [default: 'total']
  
  // General
  appearances integer
  minutes_played integer
  goals integer
  assists integer
  expected_goals float
  expected_assists float
  rating float
  penalty_goals integer
  
  // Passing & Creation
  accurate_passes integer
  total_passes integer
  accurate_passes_pct float
  key_passes integer
  big_chances_created integer
  accurate_long_balls integer
  total_long_balls integer
  accurate_long_balls_pct float
  accurate_crosses integer
  total_crosses integer
  accurate_crosses_pct float
  
  // Shooting
  total_shots integer
  shots_on_target integer
  shots_off_target integer
  blocked_scoring_attempt integer
  big_chances_missed integer
  
  // Dribbling
  dribbles_won integer
  dribbles_attempted integer
  dribbles_won_pct float
  
  // Aerial Duels
  aerial_duels_won integer
  aerial_duels_total integer
  aerial_duels_won_pct float
  
  // Ground Duels
  ground_duels_won integer
  ground_duels_total integer
  ground_duels_won_pct float
  
  // Defense
  tackles integer
  interceptions integer
  clearances integer
  blocked_shots integer
  dispossessed integer
  offsides integer
  possession_lost integer
  total_duels_won integer
  total_duels_won_pct float
  
  // Goalkeeper
  saves integer
  clean_sheets integer
  saves_inside_box integer
  saves_outside_box integer
  goals_conceded integer
  goals_conceded_inside_box integer
  goals_conceded_outside_box integer
  penalties_saved integer
  punches integer
  
  // Running
  distance_covered float
  sprints integer
  max_speed float
  high_claims integer
  runs_out integer
  successful_runs_out integer
  
  // Metadata
  source varchar [default: 'league']
  raw_json varchar
  fetched_at timestamp [default: `now()`]

  Indexes {
    (player_id, tournament_id, season_id, accumulation) [unique]
    (tournament_id, season_id)
    (player_id)
  }
}

// ===============================
// EVALUACIÓN (ALGORITMO DE SCOUTING)
// ===============================

Table player_evaluations {
  id integer [primary key]
  stats_id integer [not null]
  role varchar
  role_score float
  league_score float
  world_score float
  calculated_at timestamp [default: `now()`]
  
  Indexes {
    (stats_id, role) [unique]
  }
}

// ===============================
// RELACIONES (FOREIGN KEYS LÓGICAS)
// ===============================

Ref: season_stats.player_id > players.player_id
Ref: player_evaluations.stats_id > season_stats.id